Move top-aligned UI higher to avoid appearing on smaller screens

--- a/html/index.css
+++ b/html/index.css
@@ -31,7 +31,7 @@
 }
 
 .top-hidden {
-    top: -10rem;
+    top: -15rem;
 }
 
 #preRaceCountdown {
